--- a/Mini Weka.ipynb
+++ b/Mini Weka.ipynb
@@ -134,56 +134,56 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>128</th>\n",
+       "      <th>51</th>\n",
        "      <td>6.4</td>\n",
-       "      <td>2.8</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>b'Iris-virginica'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>129</th>\n",
-       "      <td>7.2</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>b'Iris-virginica'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.1</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1.5</td>\n",
        "      <td>b'Iris-versicolor'</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>6.5</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>b'Iris-virginica'</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>7</th>\n",
        "      <td>5.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.5</td>\n",
        "      <td>0.2</td>\n",
        "      <td>b'Iris-setosa'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>5.7</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>b'Iris-setosa'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>b'Iris-setosa'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>6.1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>b'Iris-versicolor'</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     sepallength  sepalwidth  petallength  petalwidth               class\n",
-       "128          6.4         2.8          5.6         2.1   b'Iris-virginica'\n",
-       "129          7.2         3.0          5.8         1.6   b'Iris-virginica'\n",
-       "98           5.1         2.5          3.0         1.1  b'Iris-versicolor'\n",
-       "116          6.5         3.0          5.5         1.8   b'Iris-virginica'\n",
-       "4            5.0         3.6          1.4         0.2      b'Iris-setosa'"
+       "    sepallength  sepalwidth  petallength  petalwidth               class\n",
+       "51          6.4         3.2          4.5         1.5  b'Iris-versicolor'\n",
+       "7           5.0         3.4          1.5         0.2      b'Iris-setosa'\n",
+       "15          5.7         4.4          1.5         0.4      b'Iris-setosa'\n",
+       "6           4.6         3.4          1.4         0.3      b'Iris-setosa'\n",
+       "91          6.1         3.0          4.6         1.4  b'Iris-versicolor'"
       ]
      },
      "execution_count": 3,
@@ -237,6 +237,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>4.3</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>5.0</td>\n",
        "      <td>3.4</td>\n",
@@ -244,49 +276,17 @@
        "      <td>0.2</td>\n",
        "      <td>Iris-setosa</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>6.2</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>Iris-versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>4.4</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>120</th>\n",
-       "      <td>6.9</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>138</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>Iris-virginica</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     sepallength  sepalwidth  petallength  petalwidth            class\n",
-       "7            5.0         3.4          1.5         0.2      Iris-setosa\n",
-       "68           6.2         2.2          4.5         1.5  Iris-versicolor\n",
-       "38           4.4         3.0          1.3         0.2      Iris-setosa\n",
-       "120          6.9         3.2          5.7         2.3   Iris-virginica\n",
-       "138          6.0         3.0          4.8         1.8   Iris-virginica"
+       "     sepallength  sepalwidth  petallength  petalwidth           class\n",
+       "119          6.0         2.2          5.0         1.5  Iris-virginica\n",
+       "0            5.1         3.5          1.4         0.2     Iris-setosa\n",
+       "13           4.3         3.0          1.1         0.1     Iris-setosa\n",
+       "115          6.4         3.2          5.3         2.3  Iris-virginica\n",
+       "7            5.0         3.4          1.5         0.2     Iris-setosa"
       ]
      },
      "execution_count": 4,
@@ -1026,6 +1026,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Classe para Modelos com base Gausiana"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GaussianBase(object):\n",
+    "    def check_X_y(self, X, y=None, reset=False):\n",
+    "        n_samples, n_feature = X.shape\n",
+    "        \n",
+    "        if(y is not None and n_samples != len(y)):  raise Exception('Numero diferente de dados e rótulos das amotras')\n",
+    "        if(reset):\n",
+    "            self.n_feature = n_feature\n",
+    "            self.feature_label_encoder = [None for i in range(n_feature)]\n",
+    "        if(self.n_feature is None): raise Exception('Tente treinar o modelo primeiro')\n",
+    "        elif(self.n_feature != n_feature): raise Exception(f'Número de atributos difere do cedido anteriomente: {n_feature} ao invés de {self.n_feature}')\n",
+    "        \n",
+    "        feature_label_encoder = self.feature_label_encoder\n",
+    "        for i in range(n_feature):\n",
+    "            try:\n",
+    "                float(X[0,i])\n",
+    "            except:\n",
+    "                if(feature_label_encoder[i]==None):\n",
+    "                    feature_label_encoder[i] = LabelEncoder()\n",
+    "                    feature_label_encoder[i].fit(X[:, i])\n",
+    "                X[:, i] = feature_label_encoder[i].transform(X[:,i])\n",
+    "                \n",
+    "        self.n_samples = n_samples\n",
+    "        self.n_feature = n_feature\n",
+    "        self.feature_label_encoder = feature_label_encoder\n",
+    "                \n",
+    "        return X,y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##  Modelo probabilístico Naive Bayes<a name=\"modelo-probabilístico-naive-bayes\"></a>\n",
     "\n",
     "O Naive Bayes é um classificador probabilístico simples baseado no teorema de Bayes. O teorema de Bayes descreve a probabilidade de um evento, com base no conhecimento prévio de condições que podem estar relacionadas ao evento. Por exemplo, se o alzheimer está relacionado à idade, então, usando o teorema de Bayes, a idade de uma pessoa pode ser usada para avaliar com mais precisão a probabilidade de alzheimer, comparada com a avaliação da probabilidade sem conhecimento da idade da pessoa.\n",
@@ -1071,14 +1112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import LabelEncoder\n",
     "import math\n",
     "\n",
-    "class NaiveBayes(object):\n",
+    "class NaiveBayes(GaussianBase):\n",
     "    \n",
     "    def __init__(self):\n",
     "        self.n_feature = None\n",
@@ -1102,32 +1143,6 @@
     "    def summarize(self, instances):\n",
     "        return [ (np.mean(instances[:,i]), np.std(instances[:,i])) for i in range(self.n_feature)]\n",
     "        \n",
-    "    def check_X_y(self, X, y=None, reset=False):\n",
-    "        n_samples, n_feature = X.shape\n",
-    "        \n",
-    "        if(y is not None and n_samples != len(y)):  raise Exception('Numero diferente de dados e rótulos das amotras')\n",
-    "        if(reset):\n",
-    "            self.n_feature = n_feature\n",
-    "            self.feature_label_encoder = [None for i in range(n_feature)]\n",
-    "        if(self.n_feature is None): raise Exception('Tente treinar o modelo primeiro')\n",
-    "        elif(self.n_feature != n_feature): raise Exception(f'Número de atributos difere do cedido anteriomente: {n_feature} ao invés de {self.n_feature}')\n",
-    "        \n",
-    "        feature_label_encoder = self.feature_label_encoder\n",
-    "        for i in range(n_feature):\n",
-    "            try:\n",
-    "                float(X[0,i])\n",
-    "            except:\n",
-    "                if(feature_label_encoder[i]==None):\n",
-    "                    feature_label_encoder[i] = LabelEncoder()\n",
-    "                    feature_label_encoder[i].fit(X[:, i])\n",
-    "                X[:, i] = feature_label_encoder[i].transform(X[:,i])\n",
-    "                \n",
-    "        self.n_samples = n_samples\n",
-    "        self.n_feature = n_feature\n",
-    "        self.feature_label_encoder = feature_label_encoder\n",
-    "                \n",
-    "        return X,y\n",
-    "            \n",
     "    def fit(self, X, y):\n",
     "        \n",
     "        X,y = self.check_X_y(X,y, reset=True)\n",
@@ -1607,11 +1622,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## KNN (Sergio)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from operator import itemgetter\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from collections import Counter\n",
+    "\n",
+    "class KnnClassifier(GaussianBase):\n",
+    "    def __init__(self, n_neighbors=5, distance=\"euclideana\"):\n",
+    "        distances = {\"euclideana\":self.__euclideana, \"manhattan\":self.__manhattan, \"chebyshev\":self.__chebyshev}    \n",
+    "        \n",
+    "        self.n_neighbors = n_neighbors\n",
+    "        self.__distance = distances[distance]\n",
+    "        self.__distances = distances\n",
+    "        self.n_feature = None\n",
+    "    \n",
+    "    def __euclideana(self, x, y):\n",
+    "        return sum((x - y)**2)**0.5\n",
+    "    \n",
+    "    def __manhattan(self, x, y):\n",
+    "        return sum(abs(x - y))\n",
+    "    \n",
+    "    def __chebyshev(self, x, y):\n",
+    "        return max(abs(x - y))\n",
+    "    \n",
+    "    def fit(self, X, y):\n",
+    "        X,y = self.check_X_y(X,y, reset=True)\n",
+    "        self.X, self.y = X,y\n",
+    "    \n",
+    "    def _predict(self, sample):\n",
+    "        neighbors_distances = list(map(lambda X,y: (self.__distance(sample,X),y), self.X, self.y))\n",
+    "        neighbors_distances.sort(key=itemgetter(0))\n",
+    "        neighbors_distances.append((np.Inf,-1))\n",
+    "        \n",
+    "        k_neighbors = []\n",
+    "        for i in range(len(neighbors_distances)):\n",
+    "            k_neighbors.append(neighbors_distances[i][1])\n",
+    "            if len(k_neighbors) >= self.n_neighbors and neighbors_distances[i][0] != neighbors_distances[i+1][0]:\n",
+    "                break\n",
+    "        \n",
+    "        mode_neighbors_end = Counter(k_neighbors[(self.n_neighbors-1):]).most_common(1)[0][0]\n",
+    "        mode_neighbors = Counter(k_neighbors[:(self.n_neighbors-1)] + [mode_neighbors_end]).most_common(1)[0][0]\n",
+    "        \n",
+    "        return mode_neighbors\n",
+    "\n",
+    "    def predict(self, X):\n",
+    "        X,_ = self.check_X_y(X)\n",
+    "        return [ self._predict(sample) for sample in X]\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -1630,7 +1700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
